--- a/partials/profile.htm
+++ b/partials/profile.htm
@@ -1,18 +1,19 @@
-﻿<nav class="navbar navbar-inverse navbar-fixed-top">
+﻿
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
   <div class="container-fluid">
-	<div class="navbar-header">
-	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-		<span class="sr-only">Toggle navigation</span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-	  </button>
-	  <a class="navbar-brand" href="default.html#/viewprofile">Welcome {{name}}</a>
-	</div>
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Welcome</a>
+  </div>
   </div>
 </nav>
-
-<div class="panel panel-primary">
+<div class="panel panel-primary" style="margin-top:5px;">
     <div ng-repeat="product in store.products" >
 		<p> Hello World</p>
     </div>
