Added emojis, total likes/comments, default profile pic

--- a/partials/index.html
+++ b/partials/index.html
@@ -4,11 +4,13 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
 		<title>Facebook post template</title>
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="../css/bootstrap.min.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+
 
     <script>
 $(document).ready(function(){
@@ -84,13 +86,13 @@ $(document).ready(function(){
                           <div class="col-sm-8">
 
                                <div class="panel panel-default">
-                                 <div class="panel-heading"><a href="#" class="pull-right"><span class="glyphicon glyphicon-ok-circle green" data-toggle="popover" data-content="Some content inside the popover" data-trigger="hover" style="color: green; font-size: 2em;"></span></a> <h4>Facebook Account Name</h4></div>
+                                 <div class="panel-heading"><a href="#" class="pull-right"><span class="glyphicon glyphicon-ok-circle green" data-toggle="popover" data-content="Some content inside the popover" data-trigger="hover" style="color: green; font-size: 2em;"></span></a> <h4><i class="glyphicon glyphicon-user" style="font-size:35px;"></i> Facebook Account Name</h4></div>
                                   <div class="panel-body">
                                     <img src="//placehold.it/150x150" class="img-circle pull-right"> This is where the user puts their message/comments about the post
                                     <div class="clearfix"></div>
-                                    <hr>
                                     
-                                    <p>If you're looking for help with Bootstrap code, the <code>twitter-bootstrap</code> tag at <a href="http://stackoverflow.com/questions/tagged/twitter-bootstrap">Stackoverflow</a> is a good place to find answers.</p>
+                                    
+                                    <span class="glyphicon glyphicon-thumbs-up"> 56 <i class="fa fa-smile-o"> <i class="fa fa-frown-o"> <i class="fa fa-meh-o"></i></i></i><p style="float:right;">4 Comments<!-- If you're looking for help with Bootstrap code, the <code>twitter-bootstrap</code> tag at <a href="http://stackoverflow.com/questions/tagged/twitter-bootstrap">Stackoverflow</a> is a good place to find answers. --></p>
                                     
                                     <hr>
                                     <form>
@@ -115,7 +117,8 @@ $(document).ready(function(){
                             <div class="media">
                               <div class="media-left">
                                 <a href="#">
-                                  <img class="media-object photo-profile" src="http://0.gravatar.com/avatar/38d618563e55e6082adf4c8f8c13f3e4?s=40&d=mm&r=g" width="32" height="32" alt="...">
+                                <i class="glyphicon glyphicon-user" style="font-size:35px;"></i>
+                                  <!-- <img class="media-object photo-profile" src="http://0.gravatar.com/avatar/38d618563e55e6082adf4c8f8c13f3e4?s=40&d=mm&r=g" width="32" height="32" alt="..."> -->
                                 </a>
                               </div>
                               <div class="media-body">
