--- a/css/stylespost.css
+++ b/css/stylespost.css
@@ -5,7 +5,6 @@ html, body {
    color:#555555;
 }
 
-
 .nav {
    font-family:Arial,sans-serif;
    font-size:13px;
@@ -169,9 +168,6 @@ h1,h2,h3 {
     color:#666666;
     text-shadow:0 0 1px rgba(0,0,0,.3);
 }
-.form-control {
-	
-}
 
 .panel textarea, .well textarea, textarea.form-control
 {
@@ -285,4 +281,173 @@ small.text-muted {
   #sidebar, #sidebar a, #sidebar-footer a {
     padding-left:3px;
   }
+}
+
+
+/** Hovercard **/
+.hovercard {
+    width: 370px;
+    height: 100%;
+    border: 0;
+	position: absolute;
+	z-index: 100;
+    border-radius: 4px;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);
+    -webkit-border-radius: 2px;
+    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);
+}
+
+/** Cover picture styles */
+
+.graph-section {
+    height: 160px;
+    background-color: #3B5999;
+    position: relative;
+	border: 2px solid #9197a3;
+}
+
+.detail-section {
+    height: 137px;
+    background-color: #0080CC;
+    position: relative;
+	border: 2px solid #9197a3;
+}
+
+.comment-section{
+    height: 200px;
+    position: absolute;
+    width: 100%;
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(38,38,38,0.40) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(38,38,38,0.40))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#8c262626',GradientType=0 ); /* IE6-9 */
+}
+
+.title-container {
+    margin: -40px 0 0 140px;
+    position: absolute;
+}
+
+.title-container a {
+    color: #ffffff;
+    font-size: 12px;
+    font-family: Helvetica, Arial, 'lucida grande',tahoma,verdana,arial,sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    text-decoration: underline;
+}
+
+.other-info {
+    color: #fff;
+    font-size: 12px;
+    margin: 0;
+}
+
+/** Hover card info and interaction */
+
+.info {
+    height: 37px;
+    width: 100%;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    position: absolute;
+    top: 200px;
+}
+
+.info-inner {
+    padding: 9px;
+    margin-left: 120px;
+}
+
+.info-inner a {
+    text-decoration: none;
+}
+
+.interactions {
+    float: right;
+}
+
+/** Person/Page info styles */
+
+.details {
+    margin-top: -60px;
+    margin-left: 90px;
+    font-size: 11px;
+}
+
+.details-list {
+    list-style-type: none;
+    color: #333;
+    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+}
+
+.details-list-sub-item {
+    color: #9197a3;
+}
+
+.comment_form input, .comment_form textarea {
+	border: 4px solid white;
+	padding: 8px 10px;
+	
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	
+	outline: 0;
+}
+
+.comment_form textarea {
+	width: 100%;
+	height: 200px;
+}
+
+.comment_form input[type="submit"] {
+	cursor: pointer;
+	background: -webkit-linear-gradient(top, #efefef, #ddd);
+	background: -moz-linear-gradient(top, #efefef, #ddd);
+	background: -ms-linear-gradient(top, #efefef, #ddd);
+	background: -o-linear-gradient(top, #efefef, #ddd);
+	background: linear-gradient(top, #efefef, #ddd);
+	color: #333;
+	text-shadow: 0px 1px 1px rgba(255,255,255,1);
+	border: 1px solid #9197a3;
+}
+
+.comment_form input[type="submit"]:hover {
+	background: -webkit-linear-gradient(top, #eee, #ccc);
+	background: -moz-linear-gradient(top, #eee, #ccc);
+	background: -ms-linear-gradient(top, #eee, #ccc);
+	background: -o-linear-gradient(top, #eee, #ccc);
+	background: linear-gradient(top, #eee, #ccc);
+	border: 1px solid #bbb;
+}
+
+.comment_form input[type="submit"]:active {
+	background: -webkit-linear-gradient(top, #ddd, #aaa);
+	background: -moz-linear-gradient(top, #ddd, #aaa);
+	background: -ms-linear-gradient(top, #ddd, #aaa);
+	background: -o-linear-gradient(top, #ddd, #aaa);
+	background: linear-gradient(top, #ddd, #aaa);	
+	border: 1px solid #999;
+}
+
+.real{
+	color: green; 
+	font-size: 2em;
+}
+
+.fake{
+	color: red; 
+	font-size: 2em;
+}
+
+.neutral{
+	color: yellow; 
+	font-size: 2em;
 }
