--- a/css/stylespost.css
+++ b/css/stylespost.css
@@ -301,29 +301,24 @@ small.text-muted {
 
 .graph-section {
     height: 160px;
-    background-color: #3B5999;
+    background-color: #dfe3ed;
     position: relative;
 	border: 2px solid #9197a3;
 }
 
 .detail-section {
-    height: 137px;
-    background-color: #0080CC;
+    height: 300px;
+    background-color: #3B5999;
     position: relative;
 	border: 2px solid #9197a3;
 }
 
 .comment-section{
-    height: 200px;
+    height: 210px;
     position: absolute;
     width: 100%;
-    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(38,38,38,0.40) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(38,38,38,0.40))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* IE10+ */
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(38,38,38,0.40) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#8c262626',GradientType=0 ); /* IE6-9 */
+	background-color: white;
+	border: 2px solid #9197a3;
 }
 
 .title-container {
@@ -374,17 +369,32 @@ small.text-muted {
 }
 
 /** Person/Page info styles */
-
 .details {
     margin-top: -60px;
     margin-left: 90px;
     font-size: 11px;
 }
 
-.details-list {
+.details-font {
     list-style-type: none;
-    color: #333;
+    color: white;
     font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+	margin-left:10%;
+}
+
+.bar-font {
+    list-style-type: none;
+    color: white;
+    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+	font-size: 0.8em;
+}
+
+.bar-font-inner {
+    list-style-type: none;
+    color: black;
+    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
+	margin-left:120px;
+	position: absolute;
 }
 
 .details-list-sub-item {
@@ -404,7 +414,7 @@ small.text-muted {
 
 .comment_form textarea {
 	width: 100%;
-	height: 200px;
+	height: 160px;
 }
 
 .comment_form input[type="submit"] {
@@ -448,6 +458,8 @@ small.text-muted {
 }
 
 .neutral{
-	color: yellow; 
+	color: orange; 
 	font-size: 2em;
 }
+
+
