--- a/partials/post.html
+++ b/partials/post.html
@@ -1,4 +1,6 @@
+
 <div class="padding">
+
 	<div ng-repeat="post in _posts" >
 		<div class="full col-sm-12">               
 			<!-- main col right -->
@@ -7,10 +9,11 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<a href="#" class="pull-right">
-							<span id="marker{{post.postid}}"  ng-attr-class="{{(post.score >= 0.75) ? 'glyphicon glyphicon-ok-circle real my-tooltip' : (post.score < 0.75 && post.score >= 0.50) ?'glyphicon glyphicon-ban-circle neutral my-tooltip' : 'glyphicon glyphicon-remove-circle fake my-tooltip' }}" ng-mouseover="showPopover(post.postid, post.score)"></span>
+							<span id="marker{{post.postid}}"  ng-attr-class="{{(post.score >= 0.66) ? 'glyphicon glyphicon-ok-circle real my-tooltip' : (post.score < 0.66 && post.score >= 0.33) ?'glyphicon glyphicon-ban-circle neutral my-tooltip' : 'glyphicon glyphicon-remove-circle fake my-tooltip' }}" ng-mouseover="showPopover(post.postid, post.score)"></span>
 						</a>
 						<h4>{{post.username}}</h4>
 					</div>
+					
 					<div class="panel-body">
 						{{post.message}}
 						<div class="clearfix"></div>
@@ -28,8 +31,8 @@
 								<div class="input-group-btn">
 								<button class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> Like</button>
 								<button class="btn btn-default">
-
-								<i class="glyphicon glyphicon-share"> Share</i></button>
+								<toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
+								<i class="glyphicon glyphicon-share" ng-click="share(post.postid,post.score)"> Share</i></button>
 								</div>
 								<input type="text" class="form-control" placeholder="Add a comment..">
 							</div>
@@ -68,18 +71,70 @@
 						<div id="chartContainer{{post.postid}}" style="padding-left:50px; padding-top:8px;"></div>
 					</div>
 				
-					<div class="row detail-section"> 
-						<p> {{post.message}} </p>
+					<div class="row detail-section">
+						<div class="col-sm-12">
+							<p class="details-font"> The above credibility estimation is based on... </p>
+						</div>
+						
+						<div class="col-sm-4"><p class="bar-font">Low</p></div>
+						<div class="col-sm-offset-10"><p class="bar-font">High</p></div>
+						<div class="col-sm-12">
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{post.influencesc}}%"> 
+									<p class="bar-font-inner"> Influence of user who posted <span class="glyphicon glyphicon-star"></span></p>
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-sm-12">
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{post.contentsc}}%"> 
+									<p class="bar-font-inner"> Writing quality <span class="glyphicon glyphicon-pencil"></span></p>
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-sm-12">
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{post.commentsc}}%"> 
+									<p class="bar-font-inner"> Content Controversial <span class="glyphicon glyphicon-exclamation-sign"></span></p> 
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-sm-12">
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{post.sharesc}}%"> 
+									<p class="bar-font-inner"> No of Shares <span class="glyphicon glyphicon-share"></span></p> 
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-sm-12">
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{post.likesc}}%"> 
+									<p class="bar-font-inner"> No of Likes/Love <span class="glyphicon glyphicon-thumbs-up"></span></p> 
+								</div>
+							</div>
+						</div>
+						
+						<div class="col-sm-12">
+							<div class="progress">
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{post.sadsc}}%"> 
+									<p class="bar-font-inner"> No of Sad/Anger <i class="fa fa-meh-o"></i></p>  
+								</div>
+							</div>
+						</div>
 					</div>
 					
 					<div class="row comment-section">
 						<form action="#" class="comment_form">
 							<div>
-								<textarea rows="5" name="comment" id="comment" placeholder="Do you think otherwise?"></textarea>
+								<textarea rows="5" name="comment" id="comment" placeholder="Write your thoughts here!!"></textarea>
 							</div>
 
 							<div>
-								<input type="submit" name="submit" value="Add Thoughts">
+								<input style="margin-left:38%" type="submit" name="submit" value="Submit"/>
 							</div>						
 						</form>
 					</div>
